{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 60,
  "lineage": "a58398aa-5ec0-302d-e362-5b156289c552",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:582427612955:instance/i-034597fe109558b1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034597fe109558b1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c84e7b38c3e6a4e9"
              }
            ],
            "primary_network_interface_id": "eni-0c84e7b38c3e6a4e9",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_ip": "44.192.121.207",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "App1-Ubuntu"
                },
                "tags_all": {
                  "Name": "App1-Ubuntu"
                },
                "throughput": 125,
                "volume_id": "vol-094857d1855c02a2a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09287902111323fe8",
            "tags": {
              "Name": "App1-Ubuntu",
              "Owner": "Souleymane"
            },
            "tags_all": {
              "Name": "App1-Ubuntu",
              "Owner": "Souleymane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d41df75965100809"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "i-034597fe109558b1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:582427612955:instance/i-0f9b63d6ad0968d9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9b63d6ad0968d9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e235e20033830117"
              }
            ],
            "primary_network_interface_id": "eni-0e235e20033830117",
            "private_dns": "ip-10-0-2-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.16",
            "public_ip": "54.164.174.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "App2-Ubuntu"
                },
                "tags_all": {
                  "Name": "App2-Ubuntu"
                },
                "throughput": 125,
                "volume_id": "vol-0a2c8e2b37a3b0ebd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027fd38273c303a67",
            "tags": {
              "Name": "App2-Ubuntu",
              "Owner": "Souleymane"
            },
            "tags_all": {
              "Name": "App2-Ubuntu",
              "Owner": "Souleymane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d41df75965100809"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "i-0f9b63d6ad0968d9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:internet-gateway/igw-0d674c35eba35934f",
            "id": "igw-0d674c35eba35934f",
            "owner_id": "582427612955",
            "region": "us-east-1",
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "igw-0d674c35eba35934f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:loadbalancer/app/path-routing-alb/b55bf49718f61ec1",
            "arn_suffix": "app/path-routing-alb/b55bf49718f61ec1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "path-routing-alb-740528008.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:loadbalancer/app/path-routing-alb/b55bf49718f61ec1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "path-routing-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04c3edb5780057955"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027fd38273c303a67"
              },
              {
                "subnet_id": "subnet-09287902111323fe8"
              }
            ],
            "subnets": [
              "subnet-027fd38273c303a67",
              "subnet-09287902111323fe8"
            ],
            "vpc_id": "vpc-032b0b7030d834ddb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:loadbalancer/app/path-routing-alb/b55bf49718f61ec1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Welcome to app1 or app2",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:loadbalancer/app/path-routing-alb/b55bf49718f61ec1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app1_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "\u003c!DOCTYPE html\u003e\n\u003chtml\u003e\n\u003chead\u003e\n\u003ctitle\u003eApplication 1\u003c/title\u003e\n\u003cstyle\u003e\nbody{\n    font-family: Arial, sans-serif;\n    text-align:center;\n    margin-top:100px;\n    background-color:#e8f4fd;\n}\n.container{\n    width:60%;\n    margin:auto;\n    padding:30px;\n    background:white;\n    border-radius:10px;\n    box-shadow:0px 0px 10px gray;\n}\nh1{\n    color:#0078d7;\n}\n\u003c/style\u003e\n\u003c [...]
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/30823cc16dca4612",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/app1",
                      "/app1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/30823cc16dca4612",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17",
            "priority": 1,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/30823cc16dca4612"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.http",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app2_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "\u003c!DOCTYPE html\u003e\n\u003chtml\u003e\n\u003chead\u003e\n\u003ctitle\u003eApplication 2\u003c/title\u003e\n\u003cstyle\u003e\nbody{\n    font-family: Arial, sans-serif;\n    text-align:center;\n    margin-top:100px;\n    background-color:#fef3e2;\n}\n.container{\n    width:60%;\n    margin:auto;\n    padding:30px;\n    background:white;\n    border-radius:10px;\n    box-shadow:0px 0px 10px gray;\n}\nh1{\n    color:#ff6b00;\n}\n\u003c/style\u003e\n\u003c [...]
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/ad606cd823f587ec",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/app2",
                      "/app2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/ad606cd823f587ec",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17",
            "priority": 2,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:listener-rule/app/path-routing-alb/b55bf49718f61ec1/4d7d26c0fd3bda17/ad606cd823f587ec"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.http",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36",
            "arn_suffix": "targetgroup/tg-app1/a594c61201285f36",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d",
            "arn_suffix": "targetgroup/tg-app2/34bb0cf22c62637d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-app2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36,i-034597fe109558b1f,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36",
            "target_id": "i-034597fe109558b1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app1/a594c61201285f36",
            "target_id": "i-034597fe109558b1f"
          },
          "dependencies": [
            "aws_instance.app1",
            "aws_lb_target_group.app1_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d,i-0f9b63d6ad0968d9e,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d",
            "target_id": "i-0f9b63d6ad0968d9e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:582427612955:targetgroup/tg-app2/34bb0cf22c62637d",
            "target_id": "i-0f9b63d6ad0968d9e"
          },
          "dependencies": [
            "aws_instance.app2",
            "aws_lb_target_group.app2_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:route-table/rtb-00d840dbce5b625c7",
            "id": "rtb-00d840dbce5b625c7",
            "owner_id": "582427612955",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d674c35eba35934f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "rtb-00d840dbce5b625c7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0359f3a1aae45cec6",
            "region": "us-east-1",
            "route_table_id": "rtb-00d840dbce5b625c7",
            "subnet_id": "subnet-09287902111323fe8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "rtbassoc-0359f3a1aae45cec6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c542d7ce323b52",
            "region": "us-east-1",
            "route_table_id": "rtb-00d840dbce5b625c7",
            "subnet_id": "subnet-027fd38273c303a67"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "rtbassoc-087c542d7ce323b52",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:security-group/sg-04c3edb5780057955",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c3edb5780057955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "582427612955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "sg-04c3edb5780057955",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:security-group/sg-0d41df75965100809",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d41df75965100809",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c3edb5780057955"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "582427612955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "sg-0d41df75965100809",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:subnet/subnet-09287902111323fe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09287902111323fe8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582427612955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "subnet-09287902111323fe8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:subnet/subnet-027fd38273c303a67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027fd38273c303a67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582427612955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-032b0b7030d834ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "subnet-027fd38273c303a67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582427612955:vpc/vpc-032b0b7030d834ddb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f5d82b98f8625f0",
            "default_route_table_id": "rtb-013836e613c9d6ecf",
            "default_security_group_id": "sg-0e63db93944525aab",
            "dhcp_options_id": "dopt-03d2c659934ca1700",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032b0b7030d834ddb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013836e613c9d6ecf",
            "owner_id": "582427612955",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "582427612955",
            "id": "vpc-032b0b7030d834ddb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}